--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.7",
+    "lodash": "^4.17.21",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
