--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "firebase": "^9.6.7",
     "lodash": "^4.17.21",
     "react": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "~2.9.1",
+    "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
