--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "console.table": "^0.10.0",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.7",
