--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.7",
     "lodash": "^4.17.21",
+    "nanoid": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
