--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "nanoid": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
