--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
