--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/drawer": "^6.4.4",
@@ -18,6 +19,7 @@
     "axios": "^1.1.3",
     "console.table": "^0.10.0",
     "expo": "~46.0.9",
+    "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.6.7",
     "lodash": "^4.17.21",
@@ -28,14 +30,17 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-chat": "^1.0.4",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "12.3.0",
     "react-native-text-ticker": "^1.14.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.4",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "underscore": "^1.13.6"
