--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-chat": "^1.0.4",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "4.3.1",
