--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@redmin_delishaj/react-native-select": "^1.0.6",
     "axios": "^1.1.3",
     "console.table": "^0.10.0",
     "expo": "~46.0.9",
