--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-masked-view/masked-view": "^0.2.8",
-    "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/material-bottom-tabs": "^6.2.3",
@@ -27,7 +25,6 @@
     "nanoid": "^4.0.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-chat": "^1.0.4",
@@ -35,10 +32,9 @@
     "react-native-modal": "^13.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "^2.11.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "12.3.0",
     "react-native-text-ticker": "^1.14.0",
     "react-native-vector-icons": "^9.2.0",
